# prompt_quality_lab

./: .gitignore  README-Henry-NewPC.md  README.md  dspy_few_shot_test.csv  financial_diagnostic_dspy_test.csv  labelled_prompts.csv  pyproject.toml  requirements.txt  streamlit_app.py
data/: manifest.json
docs/superpowers/plans/: 2026-05-15-prompt-quality-lab-scaffold.md  2026-05-17-ab-eval-harness.md  2026-05-17-golden-dataset.md
docs/superpowers/specs/: 2026-05-15-prompt-quality-lab-scaffold-design.md  2026-05-17-ab-eval-harness-design-Henry-NewPC.md  2026-05-17-golden-dataset-design-Henry-NewPC.md
pages/: 1_Dataset_Manager.py
src/credit_datasets/: __init__.py  paths.py  schema.py  store.py
src/prompt_quality_lab/: __init__.py  anthropic_client.py  app.py  config.py  dataset_bridge.py  loaders.py
src/prompt_quality_lab/dataset_manager/: add_view.py  detail_view.py  list_view.py  page.py
src/prompt_quality_lab/optimisers/: dspy_bootstrap.py  langchain_template.py  prompt_improver.py  variants.py
tests/: test_anthropic_client.py  test_dataset_bridge.py  test_dspy_bootstrap.py  test_list_view_filters.py  test_loaders.py
