[project]
name = "prompt-quality-lab"
version = "0.1.0"
description = "Test prompt-optimisation frameworks against Anthropic Claude"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "anthropic>=0.40",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-docx>=0.8",
    "PyPDF2>=3.0",
]

[project.optional-dependencies]
# Powers the Dataset Manager page. Resolved locally via [tool.uv.sources] below.
# Not installed by default so cloud deploys (Render, etc.) can `pip install -e .`
# without needing the sibling ../credit_datasets directory.
dataset-manager = ["credit-datasets"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_quality_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv.sources]
credit-datasets = { path = "../credit_datasets", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
